/*
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

//
//----------------------------------------------
//  Check protobuf version
//----------------------------------------------
//
//  Check what version of protobuf is installed (Ex. 3.7.0 on Mar 31, 2020)
//  //third-party/java/protobuf
//
//  Install `protoc` of the same version as above (Ex. 3.7.0 )
//  http://google.github.io/proto-lens/installing-protoc.html
//
//----------------------------------------------
//  Install of protobuf version 3.7.0
//----------------------------------------------
//   PROTOC_ZIP=protoc-3.7.0-osx-x86_64.zip
//   curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.7.0/$PROTOC_ZIP
//   sudo unzip -o $PROTOC_ZIP -d /usr/local bin/protoc
//   sudo unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
//   rm -f $PROTOC_ZIP
//----------------------------------------------
//
//
//----------------------------------------------
//  Generate command
//----------------------------------------------
//        protoc \
//        --java_out=src-gen/ \
//        --java_opt=annotate_code \
//        src/com/facebook/buck/downwardapi/resources/proto/downward_api.proto \
//        --plugin=protoc-gen-grpc-java=third-party/java/grpc/protoc-gen-grpc-java-1.10.1-osx-x86_64.exe \
//        --grpc-java_out=src/ \
//        && yes | rm src-gen/com/facebook/buck/downward/model/*.meta
//
//-----------------------
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.facebook.buck.downward.model";
option java_outer_classname = "DownwardAPIProto";

// best practices to include version number in package
package downward.api.v1;

import "google/protobuf/duration.proto";

message EventTypeMessage {
    EventType event_type = 1;

    enum EventType {
        UNKNOWN = 0;
        CONSOLE_EVENT = 1;
        LOG_EVENT = 2;
        CHROME_TRACE_EVENT = 3;
        STEP_EVENT = 4;
        END_EVENT = 100;
    }
}

enum LogLevel {
    UNKNOWN = 0;
    FATAL = 1;
    ERROR = 2;
    WARN = 3;
    INFO = 4;
    DEBUG = 5;
    TRACE = 6;
}

message ConsoleEvent {
    LogLevel log_level = 1;
    string message = 2;
}

message LogEvent {
    LogLevel log_level = 1;
    string message = 2;
    string logger_name = 3;
}

message StepEvent {
    // required for matching start to finish events for downward API. Does not map to a field in
    // buck's StepEvent
    int32 event_id = 1;
    StepStatus step_status = 2;
    string step_type = 3;
    string description = 4;
    // relative time duration from the beginning of the tool invocation
    google.protobuf.Duration duration = 5;

    enum StepStatus {
        UNKNOWN = 0;
        STARTED = 1;
        FINISHED = 2;
    }
}

// Maps to SimplePerfEvent in buck.
message ChromeTraceEvent {
    // required for matching begin to end events for downward API. Does not map to a field in
    // SimplePerfEvent
    int32 event_id = 1;
    string category = 2;
    ChromeTraceEventStatus status = 3;
    // just included into chrome trace
    map<string, string> data = 4;
    // relative time duration from the beginning of the tool invocation
    google.protobuf.Duration duration = 5;
    string title = 6;

    enum ChromeTraceEventStatus {
        UNKNOWN = 0;
        BEGIN = 1;
        END = 2;
    }
}

// Empty event to indicate end of downward APi protocol
message EndEvent {}
